# Codira

./: .clang-tidy  .dir-locals.el  .flake8  .gitattributes  .gitignore  .goreleaser.yaml  .mailmap  CHANGELOG.md  CMakeLists.txt  CODE_OWNERS.TXT  CONTRIBUTING.md  README.md  go.mod  go.sum
CodiraCompilerSources/: .gitignore  CMakeLists.txt  Package.code  README.md  force_lib.c  stubs.cpp
CodiraCompilerSources/Sources/: CMakeLists.txt
Runtimes/Core/: CMakeLists.txt  Readme.md
Runtimes/Overlay/: CMakeLists.txt
benchmark/: CMakeLists.txt  Naming.md  Package.code  README.md
benchmark/cxx-source/: CreateObjects.code  CxxSetToCollection.code  CxxSpanTests.code  CxxStringConversion.code  CxxVectorSum.code  ReadAccessor.code
benchmark/scripts/: Benchmark_DTrace.in  Benchmark_Driver  Benchmark_GuardMalloc.in  Benchmark_QuickCheck.in  Benchmark_RuntimeLeaksRunner.in  CMakeLists.txt  Template.code  build_linux.py  build_script_helper.py  compare_perf_tests.py  create_benchmark.py  run_smoke_bench  test_Benchmark_Driver.py  test_compare_perf_tests.py  test_utils.py
benchmark/single-source/: Ackermann.code  AngryPhonebook.code  AnyHashableWithAClass.code  Array2D.code  ArrayAppend.code  ArrayInClass.code  ArrayLiteral.code  ArrayOfGenericPOD.code  ArrayOfGenericRef.code  ArrayOfPOD.code  ArrayOfRef.code  ArrayRemoveAll.code  ArraySetElement.code  ArraySubscript.code  AsyncTree.code  BinaryFloatingPointConversionFromBinaryInteger.code  BinaryFloatingPointProperties.code  BitCount.code  Breadcrumbs.code  BucketSort.code  BufferFill.code  BufferFind.code  ByteSwap.code  COWArrayGuaranteedParameterOverhead.code  COWTree.code  CSVParsing.code  CString.code  Calculator.code  CaptureProp.code  ChaCha.code  ChainedFilterMap.code  CharacterLiteralsLarge.code  CharacterLiteralsSmall.code  CharacterProperties.code  CharacterProperties.code.gyb  CharacterProperties.swift.gyb  CharacterRecognizer.code  Chars.code  ClassArrayGetter.code  CodableTest.code  (+163 more)
benchmark/utils/: ArgParse.code  DriverUtils.code  SimpleArray.code  TestsUtils.code  convertToJSON.py  main.code
lib/: CMakeLists.txt
lib/APIDigester/: CMakeLists.txt  ModuleAnalyzerNodes.cpp  ModuleDiagsConsumer.cpp
lib/AST/: ASTContext.cpp  ASTDemangler.cpp  ASTDumper.cpp  ASTMangler.cpp  ASTNode.cpp  ASTPrinter.cpp  ASTScope.cpp  ASTScopeCreation.cpp  ASTScopeLookup.cpp  ASTScopePrinting.cpp  ASTScopeSourceRange.cpp  ASTVerifier.cpp  ASTWalker.cpp  AbstractConformance.h  AbstractSourceFileDepGraphFactory.cpp  AccessNotes.cpp  AccessRequests.cpp  ActorIsolation.cpp  ArgumentList.cpp  Attr.cpp  AutoDiff.cpp  Availability.cpp  AvailabilityConstraint.cpp  AvailabilityContext.cpp  AvailabilityDomain.cpp  AvailabilityQuery.cpp  AvailabilityScope.cpp  AvailabilityScopeBuilder.cpp  AvailabilitySpec.cpp  Builtins.cpp  CMakeLists.txt  CaptureInfo.cpp  ClangCodiraTypeCorrespondence.cpp  ClangSwiftTypeCorrespondence.cpp  ClangTypeConverter.cpp  ClangTypeConverter.h  CodiraNameTranslation.cpp  ConcreteDeclRef.cpp  Concurrency.cpp  ConformanceLookup.cpp  (+77 more)
lib/ASTGen/: CMakeLists.txt  Package.code  _RegexParser_Sources
lib/ASTSectionImporter/: ASTSectionImporter.cpp  CMakeLists.txt
lib/Basic/: Assertions.cpp  BasicBridging.cpp  BasicSourceInfo.cpp  BlockList.cpp  CASOptions.cpp  CMakeLists.txt  Cache.cpp  ClusteredBitVector.cpp  DiverseStack.cpp  Edit.cpp  EditorPlaceholder.cpp  ExponentialGrowthAppendingBinaryByteStream.cpp  Feature.cpp  FileSystem.cpp  FileTypes.cpp  Fingerprint.cpp  JSONSerialization.cpp  LangOptions.cpp  LoadDynamicLibrary.cpp  Located.cpp  Mangler.cpp  OutputFileMap.cpp  ParseableOutput.cpp  PartsOfSpeech.def  Platform.cpp  PrefixMap.cpp  PrettyStackTrace.cpp  PrimitiveParsing.cpp  Program.cpp  QuotedString.cpp  Sandbox.cpp  SmallBitVector.cpp  SourceLoc.cpp  StableHasher.cpp  Statistic.cpp  StringExtras.cpp  SupportedFeatures.cpp  TargetInfo.cpp  TaskQueue.cpp  ThreadSafeRefCounted.cpp  (+4 more)
lib/ClangImporter/: CFDatabase.def  CFTypeInfo.cpp  CFTypeInfo.h  CMakeLists.txt  CXXMethodBridging.h  ClangAdapter.cpp  ClangAdapter.h  ClangClassTemplateNamePrinter.cpp  ClangClassTemplateNamePrinter.h  ClangDerivedConformances.cpp  ClangDerivedConformances.h  ClangDiagnosticConsumer.cpp  ClangDiagnosticConsumer.h  ClangImporter.cpp  ClangImporterRequests.cpp  ClangIncludePaths.cpp  ClangIncludePaths.h  ClangModuleDependencyScanner.cpp  ClangSourceBufferImporter.cpp  ClangSourceBufferImporter.h  CodiraDeclSynthesizer.cpp  CodiraDeclSynthesizer.h  CodiraLookupTable.cpp  CodiraLookupTable.h  DWARFImporter.cpp  ImportDecl.cpp  ImportEnumInfo.cpp  ImportEnumInfo.h  ImportMacro.cpp  ImportName.cpp  ImportName.h  ImportType.cpp  ImporterImpl.h  InferredAttributes.def  MacroTable.def  MappedTypes.def  Serializability.cpp  SortedCFDatabase.def.gyb  SwiftDeclSynthesizer.cpp  SwiftDeclSynthesizer.h  (+2 more)
lib/CodiraDemangle/: CMakeLists.txt  CodiraDemangle.cpp  MangleHack.cpp
lib/CodiraRemoteInspection/: CMakeLists.txt
lib/CodiraRemoteMirror/: CMakeLists.txt
lib/Driver/: Job.cpp  (+13 more)
stdlib/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  lit.swift-features.cfg.inc  swift_test.py
tools/: CMakeLists.txt
utils/: CMakeLists.txt  CodiraAtomics.py  CodiraFloatingPointTypes.py  CodiraIntTypes.py  GYBUnicodeDataUtils.py  PathSanitizingFileCheck  analyze_code_size.py  apply-fixit-edits.py  availability-macros.def  backtrace-check  build-presets.ini  build-script  build-script-impl  build-toolchain  build-tooling-libs  build-windows-toolchain.bat  build.ps1  check-incremental  check_freestanding_dependencies.py  check_freestanding_size.py  download-unpublished-toolchains.py  find-overlay-dependencies-loop.sh  find-overlay-dependencies.sh  find-overlay-deps-closure.sh  find-unused-diagnostics.sh  generate-doc-index.code  generate-xcode  generate_confusables.py  gyb_foundation_support.py  gyb_stdlib_support.py  inferior-swift-mode.el  line-directive  lsan_leaks_suppression_list.txt  optimizer_counters_to_sql.py  process-stats-dir.py  process-stats-lost-variables  profdata_merge_simple  protocol_graph.py  python_format.py  python_lint.py  (+29 more)
(+26778 files in other folders)
